# eli-math

./: Cargo.toml
.circleci/: config.yml
src/: gpu.rs  lib.rs  linear_algebra.rs  main.rs  matrix.rs  misc.rs  random.rs  shader.wgsl  vector.rs
src/gpu/shaders/matrix/: dot_mat.wgsl
src/gpu/shaders/vector/: add_vec.wgsl
src/linear_algebra/: matrix.rs  vector.rs
tests/: Matrix.rs  Vector.rs  gpu.rs  linear_algebra.rs  matrix.rs  misc.rs  random.rs  vector.rs
